# 1stq-py-assignment

./: .gitignore  README.md  pyproject.toml
assignement3/: ais.py  convert.py  convert_test.py  giraffe.asc  holland.asc  memo.md  simple_noeol.asc  transformer.py
assignement3/assignment3/: bitlist.py  convert.py  holland.asc  simple_eol.asc  snail.asc
assignment0/: windchill.py
assignment1/: solve.py  solve_test.py  tienstra.py  tienstra_test.py
assignment2/: distance.py  distance_test.py  dms.py  dms_test.py  nominatim.py  nominatim_offline.py  patterns.py  query.py  robot.py
assignment3/: ais.py  convert.py  convert_test.py  loader.py  loader_test.py  transformer.py  transformer_test.py  writer.py
assignment4/: assignment4.html
assignment4/cpp/: makefile  triangulate.cpp  triangulate2.cpp
assignment4/py/: benchmark.py  delaunay.py  geometry.py  geometry.test.py
